new html for blood page

--- a/blood.html
+++ b/blood.html
@@ -17,12 +17,10 @@
                 <p class = "text-light">You can choose Type and Number of units of Blood Needed.<br>Thank You!!! <br>"Team Blood Hub"</p>
                 <h1 class="units">Select Units of Blood</h1>
                 <div id="counter">
-                    <button id="decrement">-</button>
-                    <span id="count">0</span>
-                    <button id="increment">+</button>
+                    <label for="quantity">Select no:</label>
+                    <input type="number" id="quantity" name="quantity" min="1" max="9">   
                   </div>
-                
-                  <script src="blood.js"></script>
+                  <h2>Select Blood type !</h2>
                 <div class = "Blood-items">
                     <!-- single Blood -->
                     <div class = "Blood">
